--- a/css/style.css
+++ b/css/style.css
@@ -127,13 +127,9 @@ a.btn.dark:focus {
 
 /* main */
 
-.container-main {
-    width: 70%;
-    margin: 0 auto;
-}
-
 .row {
     margin: 2em 0;
+    padding: 0 19em;
 }
 
 .row.gray {
