--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,6 @@ main {
 }
 
 
-
 .gray {
     background-color: #f6f6f6;
 }
@@ -159,7 +158,7 @@ main {
 }
 
 .font-size {
-    font-size: 3em;
+   font-size: 3em;
    margin-top: 0.em;
 }
 
@@ -180,5 +179,30 @@ main {
 }
 
 .bottom-btn {
-    margin: 5em 0;
+    margin: 3em 0;
+}
+
+footer{
+    background-color: black;
+}
+
+.container-footer {
+    width: 70%;
+    margin: 0 auto;
+    color: white;
+}
+
+.footer-col1 {
+    width: 40%;
+}
+
+.footer-col2,
+.footer-col3,
+.footer-col4,
+.footer-col5 {
+    width: 15%;
+}
+
+.flag {
+    width: 1em;
 }
