--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,8 @@ nav .float:nth-child(2) {
     vertical-align: middle;
 }
 
-.nav-menu {
+.nav-menu,
+.footer-menu {
     list-style-type: none;
 }
 
@@ -61,7 +62,8 @@ nav .float:nth-child(2) {
     margin-right: 1em;
 }
 
-.navbar a {
+.navbar a,
+.footer-menu a {
     color: white;
     text-decoration: none;
     font-weight: bold;
@@ -71,6 +73,18 @@ nav .float:nth-child(2) {
 .navbar a:focus {
     text-decoration: underline;
 }
+
+.footer-menu a:hover,
+.footer-menu a:active,
+.footer-menu a:active, {
+    text-decoration: underline;
+
+}
+
+.footer-menu {
+    line-height: 2em;
+}
+
 
 .nav-menu li:last-child {
     margin-right: 0;
@@ -184,6 +198,7 @@ main {
 
 footer{
     background-color: black;
+    padding: 5em 0;
 }
 
 .container-footer {
@@ -206,6 +221,16 @@ footer{
 .flag {
     width: 1em;
 }
+
+.text-footer-social {
+    color: #697EC7;
+    font-size: 2em;
+    margin-bottom: 1em;
+}
+
+.text-footer-link  {
+     color: #697EC7;
+     margin-bottom: 1em;
 
 
 
