--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,8 @@ main {
     margin: 0 auto;
 }
 
-#light {
+#light,
+#discord-bottom {
     background-color: cornflowerblue;
 }
 
@@ -206,6 +207,16 @@ footer{
     margin: 0 auto;
     color: white;
 }
+
+.container-footer.clearfix{
+ border-bottom: 2px solid #697EC7;
+}
+
+.container-footer {
+    margin-top: 3em;
+    position: relative;
+}
+
 
 .footer-col1 {
     width: 40%;
@@ -231,6 +242,14 @@ footer{
 .text-footer-link  {
      color: #697EC7;
      margin-bottom: 1em;
+}
+
+#discord-bottom {
+    position: absolute;
+    right: 0;
+    top: 0;
+
+}
 
 
 
