--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ main {
 
 .row {
     width: 70%;
-    margin: 5em auto;
+    margin: 0 auto;
     text-align: center;
     
 }
@@ -185,10 +185,15 @@ p {
 
 .star {
     background-image: url(../img/stars.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat;
     display: inline-block;
     margin: 0 auto;
+    padding: 1em 0;
+}
+
+.text-star {
+    font-size: 2em;
 }
 
 #light,
@@ -197,7 +202,8 @@ p {
 }
 
 .bottom-btn {
-    margin: 3em 0;
+    margin-top: 3em;
+    padding-bottom: 3em;
 }
 
 footer{
